When scaling bazier curve handle it scales from the tip instead of the anchor point #58811

Closed
opened 2018-12-05 19:12:46 +01:00 by Emil Assarsson · 5 comments

System Information
Operating system: Mac OS 10.14.1
Graphics card: Radeon Pro 580

Blender Version
Broken: blender 2.8 2018-12-03
Worked: 2.79b

Short description of error
When scaling a handle in blender 2.80 beta it doesn't scale with the anchor point as pivot.
This works fine in 2.79b and is very nice way to control the length of the handle without effecting the direction.
bezierScale.png

Exact steps for others to reproduce the error
Add a bazier curve
Enter Edit mode
Select one handle point
Scale

**System Information** Operating system: Mac OS 10.14.1 Graphics card: Radeon Pro 580 **Blender Version** Broken: blender 2.8 2018-12-03 Worked: 2.79b **Short description of error** When scaling a handle in blender 2.80 beta it doesn't scale with the anchor point as pivot. This works fine in 2.79b and is very nice way to control the length of the handle without effecting the direction. ![bezierScale.png](https://archive.blender.org/developer/F5838458/bezierScale.png) **Exact steps for others to reproduce the error** Add a bazier curve Enter Edit mode Select one handle point Scale
Author

Added subscriber: @jackdaw

Added subscriber: @jackdaw

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Campbell Barton was assigned by Sebastian Parborg 2018-12-06 19:27:56 +01:00

You can still get the old functionality if you choose pivot point to active element instead of median.
However as you pointed out, in 2.79 this wasn't needed as it automatically scaled the handles from the active element even if you were in median mode.

You can still get the old functionality if you choose pivot point to active element instead of median. However as you pointed out, in 2.79 this wasn't needed as it automatically scaled the handles from the active element even if you were in median mode.

This issue was referenced by 10540822dc

This issue was referenced by 10540822dcc7ec5d211e9f9deb3e8a750ec7232e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58811
No description provided.