Fix T58811: Scale bezier handle uses tip as origin